bird (1.0.15-1) unstable; urgency=low

  * New Upstream Version

 -- Ondřej Surý <ondrej@debian.org>  Wed, 27 May 2009 13:57:08 +0200

bird (1.0.14-1) unstable; urgency=low

  * New Upstream Version

 -- Ondřej Surý <ondrej@debian.org>  Tue, 28 Apr 2009 14:48:36 +0200

bird (1.0.13-1) unstable; urgency=low

  * New upstream release

 -- Ondřej Surý <ondrej@debian.org>  Sun, 15 Mar 2009 00:27:28 +0100

bird (1.0.12-1) unstable; urgency=low

  * New upstream release. (Closes: #462341, #462344, #427772)
  * Acknowledge NMU
  * Fix typo in init.d script (Closes: #476752)
  * 002_add_DESTDIR.patch:
    + Honor nostrip option (Closes: #436590)
  * 005_fix-flex-params.patch, 000_update_config_guess_sub.patch
    + Removed, merged upstream.

 -- Ondřej Surý <ondrej@debian.org>  Wed, 12 Nov 2008 16:03:54 +0100

bird (1.0.11-4.1) unstable; urgency=low

  * Non-maintainer upload.
  * Added LSB formatted dependency info in init.d script (closes: #469618)

 -- Peter Eisentraut <petere@debian.org>  Fri, 04 Apr 2008 11:05:04 +0200

bird (1.0.11-4) unstable; urgency=low

  * Fix socket location to /var/run/bird.ctl (Closes: #382104)

 -- Ondřej Surý <ondrej@debian.org>  Thu, 26 Oct 2006 09:57:15 +0200

bird (1.0.11-3) unstable; urgency=low

  * Change priority from optional to extra.
  * Manually update config.{guess,sub} since dual build broke
    autoupdating (Closes: #378213, #378252)

 -- Ondřej Surý <ondrej@debian.org>  Thu, 13 Jul 2006 11:02:43 -0400

bird (1.0.11-2) unstable; urgency=low

  * 003_birdc-fix-buffer-overflow.patch:
    + Fix some command line buffer overflow condition (Closes: #317733)
  * 004_fix_ifr_storage_size_unknown.patch
    + Make IPv4 compilable again.
  * 005_fix-flex-params.patch
    + New flex is more picky about params, fix that.
  * 006_birdc-include-more-headers.patch
    + Fix some more warnings by including correct headers.
  * Prepare for dual IPv4 and IPv6 build:
    + Upload IPv4 version right now, previous one was only IPv6